crates/ink/tests/ui/trait_def/fail/config_namespace_invalid_2.stderr
error: ink! config options require an argument separated by '='
 --> tests/ui/trait_def/fail/config_namespace_invalid_2.rs:1:25
  |
1 | #[ink::trait_definition(namespace)]
  |                         ^^^^^^^^^
